# llm_models

./: Cargo.toml  LICENSE  README.md
.github/workflows/: update-models.yml
src/: generated.rs  lib.rs
